--- a/latexreports/report-figures.tex
+++ b/latexreports/report-figures.tex
@@ -19,11 +19,11 @@
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin a felis sagittis hendrerit. Suspendisse consequat lectus ac ipsum semper, id rutrum orci fermentum. Curabitur commodo tellus quis arcu congue, ac aliquam orci ullamcorper. Suspendisse ullamcorper, sem et ultricies sagittis, arcu augue rhoncus dui, eu tincidunt metus ante ac ante. Cras pharetra, urna eu maximus egestas, sem ipsum faucibus leo, sit amet rutrum risus ipsum accumsan diam. Sed tempor nibh metus, a condimentum lorem viverra sed. Mauris pretium efficitur tempus. Praesent eu mi malesuada, malesuada justo sit amet, posuere sem. Praesent pulvinar libero et enim auctor eleifend. Suspendisse vitae consequat felis. Pellentesque ut ultricies tortor. Nam at arcu ac arcu porta gravida nec vel risus. Praesent dui magna, pellentesque vitae tempor eu, efficitur sit amet eros.
 
-\section{Some 2 figure}
+\section{Some 2D figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics{example_1.pdf}
+	\includegraphics{bar_ex.pdf}
 	\caption{Our first figure.}
 \end{figure}
 
